# actix-simple-bp

./: .env.example  Cargo.toml  Dockerfile  README.md  startup.sh
migrations/2020-03-04-115154_create_users/: up.sql
src/: auth.rs  main.rs  routes.rs  server.rs  validate.rs
src/config/: mod.rs  tls.rs
src/database/: connection.rs  schema.rs
src/handlers/: auth.rs  health.rs  user.rs
src/middleware/: auth.rs  mod.rs  redirect_https.rs  redis_identity.rs
src/models/: user.rs
src/server_helpers/: cache.rs  errors.rs  i18n_fluent.rs  mod.rs  response.rs
src/tests/: helpers.rs
static/: index.html  login.html
