[package]
name = "actix_simple_bp"
version = "0.2.0"
authors = [""]
edition = "2018"

[dependencies]
actix = "0.9.0"
actix-cors = "0.2.0"
actix-files = "0.2.1"
actix-session = "0.3.0"
actix-identity = "0.2.1"
actix-redis = "0.8.0"
actix-rt = "1"
actix-service = "1.0.5"
actix-web = { version = "2", features = ["rustls"] }
actix-ratelimit = {version = "0.2.1", features = ["redis-store"]}
argon2rs = "0.2.1"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.15"
dotenv = "0.14"
envy = "0.4"
env_logger = "0.6"
futures = "0.3.1"
lazy_static = "1.4"
listenfd = "0.3"
log = "0.4"
rayon = "1.0"
rustls = "0.16.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
validator = "0.8.0"
validator_derive = "0.8.0"
actix-web-middleware-redirect-https = "1.0.0"
rand = "0.7.3"
casbin = "0.6.1"
async-std = { version = "1.5.0", features = ["attributes"] }

r2d2 = "0.8"
r2d2-diesel = "1.0.0"
diesel = { version = "1.4.0", features = ["chrono", "mysql", "r2d2", "uuidv07"] }
redis-async = "0.6.1"

jsonwebtoken = "7"

[dev-dependencies]
actix-http-test = "0.2.0"

[features]
mysql = []
default = ["mysql"]