[package]
name = "actix_simple_bp"
version = "0.2.0"
authors = [""]
edition = "2018"

[dependencies]
actix = "0.10.0"
actix-cors = "0.5"
actix-files = "0.5"
actix-session = "0.4"
actix-identity = "0.3"
actix-redis = "0.9"
actix-rt = "1"
actix-service = "1.0.6"
actix-web = { version = "3", features = ["rustls"] }
actix-ratelimit = {version = "0.3", features = ["redis-store"]}
argon2rs = "0.2"
chrono = { version = "0.4.19", features = ["serde"] }
time = "0.2"
derive_more = ">=0.99"
dotenv = "0.14"
envy = "0.4"
env_logger = "0.6"
futures = "0.3.8"
lazy_static = "1.4"
listenfd = "0.3"
log = "0.4"
rayon = "1.5"
rustls = "0.18.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
validator = "0.12"
validator_derive = "0.12"
rand = "0.7.3"

r2d2 = "0.8"
r2d2-diesel = "1.0.0"
diesel = { version = "1.4", features = ["chrono", "mysql", "r2d2", "uuidv07"] }
redis-async = "0.6.3"

version_check = "0.9.2"

jsonwebtoken = "7"

# I18n
fluent-templates = { version = "*", features = ["handlebars"] }

[dev-dependencies]
actix-http-test = "2.1"

[features]
mysql = []
default = ["mysql"]